--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   color: #8f8074;
   background-color: #DED0B6;
-  background-image: url("/images/bg.PNG");
+  background-image: url("images/bg.PNG");
   font-family: "Rubik", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
